app/src/main/java/com/example/filmatory/errors/BaseError.kt
package com.example.filmatory.errors

open class BaseError(name: HttpStatusCodes) : Error() {

}